(Format: Year/Month/Day)
Changes for 0.9.13
*05/03/23:
  * added "Fullscreen" as a command (Mathias)
    CurrentWindow.cc/hh FbCommandFactory.cc
*05/03/17:
  * some additions to fbgm, mostly cosmetic (Mathias)
*05/03/16:
  * added -c <startupfile> to 'startfluxbox' (Mathias)
  * fix for gravity field on _NET_MOVERESIZE_WINDOW (thanx to Rob Stevens)
    Ewmh.cc, Window.(cc,hh), FbWinFrame.(cc,hh)
  * added new option to specify, on which screen fluxbox should handle 
    the windows. default behavior is to handle each available screen. 
    closes #1159809. (Mathias)

       -screen <"all"|int[,int]>

    eg:  
    
       $> fluxbox -screen 0,2      will run fluxbox on 0.0 and 0.2 so 
                                   one can run any other wm on 0.1. 
       $> fluxbox -screen all      default, fluxbox manages all screens

    fluxbox.cc fluxbox.hh
  * Fix for #1152450 (Mathias)
    when having multiple screens the rootCommand's were called
    too often
    Screen.cc FbTk/Theme.cc
  * added --with-init, --with-keys, --with-style, --with-menu
    configure options (Thanks php-coder at ngs dot ru)
    configure.in, src/Makefile.am
*05/03/11:
  * Remove trailing whitespaces from any command (Mathias)
    CommandParser.cc
  * Fix usage of 'which' - test behaviour of which to choose usage 
    method, rather than guessing based on system (Simon)
    fbsetbg fluxbox-generate_menu.in
*05/02/13:
  * Romanian translation update for fluxbox-generate_menu 
   (Thanks Costin Stroie)
  * Added stringstream.hh to FbTk (Henrik)
    using FbTk_istringstream from this one.
    FbCommandFactory.cc, Remember.cc, ClientPattern.cc
*05/02/09:
  * Fixed portability issues with fbgm (thanx to Dung)
    fluxbox-generate_menu.in
*05/02/04:
  * Fixed possible bug for invalid tools (Mathias)
    ToolFactory.cc
*05/02/03:
  * Added 'revision-number' to  fluxbox -info (Mathias)
    the revision-number only occurs in build based on svn, builds
    based on normal tarballs dont display it